<resources>
    <string name="app_name">My Tips Ledger</string>
    <string name="title_activity_landing">My Tips - Summary</string>
    <string name="type_daily">Daily</string>
    <string name="add_day">Add Day</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="settings">Setting</string>
    <string name="invite">Invite</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_save">Save</string>
    <string name="menu_day_off">Day Off</string>
    <string name="title_add_day">Add Day</string>
    <string name="label_add_profile">Add Profile</string>
    <string name="add_tipee_title">Add Tippee Info</string>
    <string name="tipee_title">Tipee</string>
    <!-- Strings related to Settings -->
    <!--<string name="api_key">AIzaSyDH6Oyg2S100M4Hu8jZ6lFb_QzBWMzjRKA</string>-->
    <!--<string name="api_key">AIzaSyCgUCggcZdnD38jDlPA1u9900Rm2dfaVfw</string>-->
    <string name="api_key">AIzaSyDytigmACaOLc87SRAdwVVWYvwiZB0mY6w</string>
    <string name="folder_id">DriveId:CAESABiiAiCIsOjCx1coAQ==</string>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_display_email">Email</string>
    <string name="pref_default_display_email">dummy@gmail.com</string>
    <string name="pref_title_date">Date</string>
    <string name="pref_default_date">Jan 1,2017</string>
    <string name="pref_time_title">Time</string>
    <string name="data_backup">Data &amp; Security </string>
    <string name="reset_data">Reset Data</string>
    <string name="backup_restore">Restore Data</string>
    <string name="backup">Backup Data</string>
    <string name="get_passcode">Set/Reset Passcode</string>
    <string name="pref_default_hour">1 hour</string>
    <string name="pref_title_add_friends_to_messages">Theme</string>
    <string name="pref_currency_title">Currency</string>
    <string name="edit_show_tipee">Show/update Tipee</string>
    <string name="active_profile">Profiles</string>
    <string name="active">Active Profiles</string>
    <string name="deactive">Deactive Profiles</string>
    <string-array name="currencies">
        <item>United States </item>
    </string-array>
    <string-array name="pref_example_list_titles">
        <!--<item>Black &amp; White</item>-->
        <!--<item>Navy – Navy Blue &amp; White </item>-->
        <!--<item>Orange – Orange &amp; White</item>-->
        <item>Blue</item>
        <item>Aqua</item>
        <item>Green</item>
        <item>Cherry</item>
        <item>Orange</item>
        <item>Purple</item>
        <item>Yellow</item>
    </string-array>

    <string-array name="date_format_array">
        <item>Jan 1, 2016</item>
        <item>Mon, Jan 1 2016</item>
        <item>01/01/2016</item>
    </string-array>
    <string-array name="pref_time">
        <item>12 hour</item>
        <item>24 hour</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
        <item>-2</item>
        <item>-3</item>
        <item>-4</item>
        <item>-5</item>
    </string-array>
    <string-array name="pref_currency_values">
        <item>1</item>
    </string-array>
    <string-array name="pref_time_list">
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="textview_setpasscode">Set your Password</string>
    <string name="confirm_pass">Confirm Password</string>

    <string name="select_file">tipeesDB.db</string>

    <array name="profile_colors">
        <item>@color/profile_color1</item>
        <item>@color/profile_color2</item>
        <item>@color/profile_color3</item>
        <item>@color/profile_color4</item>
        <item>@color/profile_color5</item>
        <item>@color/profile_color6</item>

    </array>
    <string name="screen_type">7-inch-tablet</string>
    <string name="no_data_text">No Data found. <!--\n You may add Tippees under Settings from top menu \n then Start adding profiles \n and Add your days using the bottom button.--></string>
    <string name="title_screen_slide">OnBoarding</string>

    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="subscription_period_prompt">Select your subscription period</string>
    <string name="subscription_resignup_prompt">To reactivate your subscription, selefvct your subscription period</string>
    <string name="subscription_update_prompt">To change your subscription, select your new subscription period</string>
    <string name="subscription_prompt_continue">Continue</string>
    <string name="subscription_prompt_cancel">Cancel</string>
    <string name="licence_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAsAML4UXe945wM8tzUAzsQ+09ijFR1gH4migveFc5I7mLc+JfT3ppVxTGJ2VlaoP/SS2DzN0auTzA8PdrnbNJFOeJHyclY92E6viO2yapKmun2fSdj9g+zgViFi6J6/gJOVXhwojk/KM5LK3kzHs7u0btWcBWJ41RaRoqht2r0+ZzdmdDJL6aGfWGylzFnYB0h3ExOZE98Aw04WROlV/K82G3GC9AISoVA6rpE4vAXdSSu76wJ07WhqdWi0InGmqMhfh+PdUNwpBnUz4oFUKU/Pf+aM7p0NXo9Wqq1qaZZTFvUkhcq8s2Df3Z5hr9PSQ81XyCtrjXpsKmTyNRGGtR0QIDAQAB</string>


    <string name="header_inapp">One-time deals</string>
    <string name="header_subscriptions">Subscriptions</string>
    <string name="error_no_skus">We didn\'t find any SKUs to display&#8230; Check your internet
        connection and make sure your Google Developer Console was setup correctly.</string>
    <string name="error_billing_unavailable">Billing unavailable. Make sure your Google Play app
        is setup correctly</string>
    <string name="error_billing_default">Billing unavailable. Please check your device.</string>
    <string name="alert_fill_gas">You filled &#188; tank. Your tank is now %1$d/4 full!</string>
    <string name="alert_error_consuming">Error while consuming: %1$s</string>
    <string name="alert_already_purchased">Item is already purchased</string>

</resources>
