<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<SwitchPreference-->
    <!--android:defaultValue="true"-->
    <!--android:key="example_switch"-->
    <!--android:summary="@string/pref_description_social_recommendations"-->
    <!--android:title="@string/pref_title_social_recommendations" />-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->


    <PreferenceCategory
        android:capitalize="words"
        android:editable="false"
        android:key="general_key"
        android:maxLines="1"
        android:singleLine="true"
        android:textStyle="bold"
        android:title="General">

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="example_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />


        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_email"
            android:inputType="textCapWords"
            android:key="user_email"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_email" />

        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/date_format_array"
            android:entryValues="@array/pref_example_list_values"
            android:key="date"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_date" />

        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_time"
            android:entryValues="@array/pref_time_list"
            android:key="display_time"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_time_title" />


        <ListPreference
            android:defaultValue="1"
            android:entries="@array/currencies"
            android:entryValues="@array/pref_currency_values"
            android:key="current_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_currency_title" />


        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:key="example_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_add_friends_to_messages" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="tipee_data"
        android:title="@string/tipee_title">

        <Preference
            android:capitalize="words"
            android:inputType="textCapWords"
            android:key="edit_add_tipees"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/edit_show_tipee" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="backup_data"
        android:title="@string/data_backup">

        <Preference
            android:capitalize="words"
            android:inputType="textCapWords"
            android:key="backup"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/backup" />

        <Preference
            android:capitalize="words"
            android:inputType="textCapWords"
            android:key="backup_restore"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/backup_restore" />

        <Preference
            android:capitalize="words"
            android:inputType="textCapWords"
            android:key="get_passcode"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/get_passcode" />

    </PreferenceCategory>
</PreferenceScreen>
